--- a/html/routines.html
+++ b/html/routines.html
@@ -32,7 +32,7 @@
           			  3-Day Split
         		</button>           
     		</div> <!-- END Panel head -->
-   			<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> <!-- Collapsable section -->
+   			<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion"> <!-- Collapsable section -->
         		<div class="card-body "> <!-- Panel body -->          
         	<table class="content-table">
 			<thead>
@@ -50,7 +50,7 @@
 				<tr>
 					<td>Squat</td>
 					<td>Rest</td>
-					<td><a href="squat.html">Squat</a>Squat</td>
+					<td><a href="squat.html">Squat</a></td>
 					<td>Rest</td>
 					<td>Squat</td>
 					<td>Rest</td>
@@ -172,86 +172,86 @@
         	<div class="card-body"> <!-- Panel body -->
         		<table class="content-table">
 			<thead>
-				<tr>
-					<th>Monday</th>
-					<th>Tuesday</th>
-					<th>Wednesday</th>
-					<th>Thursday</th>
-					<th>Friday</th>
-					<th>Saturday</th>
-					<th>Sunday</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>Bench Press</td>
-					<td>Squat</td>
-					<td>Rest</td>
-					<td>Bench Press</td>
-					<td>Squat</td>
-					<td>Rest</td>
-					<td>Rest</td>
-				</tr>
-				<tr>
-					<td>Pull Ups</td>
-					<td>Deadlift</td>
-					<td>Rest</td>
-					<td>Pull Ups</td>
-					<td>Deadlift</td>
-					<td>Rest</td>
-					<td>Rest</td>
-				</tr>
+			<tr>
+				<th>Monday</th>
+				<th>Tuesday</th>
+				<th>Wednesday</th>
+				<th>Thursday</th>
+				<th>Friday</th>
+				<th>Saturday</th>
+				<th>Sunday</th>
+			</tr>
+		</thead>
+		<tbody>
+		<tr>
+			<td><a href="benchpress.html">Bench Press</a></td>
+			<td><a href="squat.html">Squat</a></td>
+			<td>Rest</td>
+			<td><a href="benchpress.html">Bench Press</a></td>
+			<td><a href="squat.html">Squat</a></td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
+		<tr>
+			<td><a href="pullups.html">Pull Ups</a></td>
+			<td><a href="deadlift.html">Deadlift</a></td>
+			<td>Rest</td>
+			<td><a href="pullups.html">Pull Ups</a></td>
+			<td><a href="deadlift.html">Deadlift</a></td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
 
-				<tr>
-					<td>Overhead Press</td>
-					<td>Seated Leg Extension</td>
-					<td>Rest</td>
-					<td>Overhead Press</td>
-					<td>Seated Leg Extension</td>
-					<td>Rest</td>
-					<td>Rest</td>
-				</tr>
+		<tr>
+			<td><a href="overheadpress.html">Overhead Press</a></td>
+			<td><a href="legextension.html">Seated Leg Extension</a></td>
+			<td>Rest</td>
+			<td><a href="overheadpress.html">Overhead Press</a></td>
+			<td><a href="legextension.html">Seated Leg Extension</a></td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
 
-				<tr>
-					<td>Cable Rows</td>
-					<td>Seated Leg Curls</td>
-					<td>Rest</td>
-					<td>Cable Rows</td>
-					<td>Seated Leg Curls</td>
-					<td>Rest</td>
-					<td>Rest</td>
-				</tr>
+		<tr>
+			<td><a href="cablerows.html">Cable Rows</a></td>		
+			<td><a href="seatedcalfraise.html">Seated Leg Curls</a></td>
+			<td>Rest</td>
+			<td><a href="cablerows.html">Cable Rows</a></td>
+			<td><a href="seatedcalfraise.html">Seated Leg Curls</a></td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
 
-				<tr>
-					<td>Dumbbell Curls</td>
-					<td>Standing Calf Raise</td>
-					<td>Rest</td>
-					<td>Dumbbell Curls</td>
-					<td>Standing Calf Raise</td>
-					<td>Rest</td>
-					<td>Rest</td>
-				</tr>
+		<tr>
+			<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
+			<td><a href="calfraise.html">Calf Raise</a></td>
+			<td>Rest</td>
+			<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
+			<td><a href="calfraise.html">Calf Raise</a></td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
 
-				<tr>
-					<td>Cable Tricep Extension</td>
-					<td>Seated Calf Raise</td>
-					<td>Rest</td>
-					<td>Cable Tricep Extension</td>
-					<td>Seated Calf Raise</td>
-					<td>Rest</td>
-					<td>Rest</td>
-				</tr>
+		<tr>
+			<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
+			<td><a href="seatedcalfraise.html">Seated Calf Raise</a></td>
+			<td>Rest</td>
+			<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
+			<td><a href="seatedcalfraise.html">Seated Calf Raise</a></td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
 
-				<tr>
-					<td>*Ab workout of Your Choosing*</td>
-					<td>*Ab workout of Your Choosing*</td>
-					<td>Rest</td>
-					<td>*Ab workout of Your Choosing*</td>
-					<td>*Ab workout of Your Choosing*</td>
-					<td>Rest</td>
-					<td>Rest</td>
-				</tr>
-				</tbody>
+		<tr>
+			<td>*Ab workout of Your Choosing*</td>
+			<td>*Ab workout of Your Choosing*</td>
+			<td>Rest</td>
+			<td>*Ab workout of Your Choosing*</td>
+			<td>*Ab workout of Your Choosing*</td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
+	</tbody>
 				</table>
             
         	</div> <!-- END Panel body -->
@@ -283,72 +283,72 @@
 		</thead>
 		<tbody>
 		<tr>
-			<td>Squat</td>
-			<td>Bench Press</td>
-			<td>Pull Ups</td>
-			<td>Squat</td>
-			<td>Bench Press</td>
-			<td>Pull Ups</td>
+			<td><a href="squat.html">Squat</a></td>
+			<td><a href="benchpress.html">Bench Press</a></td>
+			<td><a href="pullups.html">Pull Ups</a></td>
+			<td><a href="squat.html">Squat</a></td>
+			<td><a href="benchpress.html">Bench Press</a></td>
+			<td><a href="pullups.html">Pull Ups</a></td>
 			<td>Rest</td>
 		</tr>
 			
 		<tr>
-			<td>Deadlift</td>
-			<td>Dumbbell Lateral Raise</td>
-			<td>Seated Cable Row</td>
-			<td>Deadlift</td>
-			<td>Dumbbell Lateral Raise</td>
-			<td>Seated Cable Row</td>
+			<td><a href="deadlift.html">Deadlift</a></td>
+			<td><a href="dumbbelllateralrasie.html">Dumbbell Lateral Raise</a></td>
+			<td><a href="cablerows.html">Cable Rows</a></td>
+			<td><a href="deadlift.html">Deadlift</a></td>
+			<td><a href="dumbbelllateralrasie.html">Dumbbell Lateral Raise</a></td>
+			<td><a href="cablerows.html">Cable Rows</a></td>
 			<td>Rest</td>
 		</tr>
 			
 		<tr>
-			<td>Seated Leg Extension</td>
-			<td>Over-head Press</td>
-			<td>Barbell Shrugs</td>
-			<td>Seated Leg Extension</td>
-			<td>Over-head Press</td>
-			<td>Barbell Shrugs</td>
+			<td><a href="legextension.html">Seated Leg Extension</a></td>
+			<td><a href="overheadpress.html">Overhead Press</a></td>
+			<td><a href="barbellshrugs.html">Barbell Shrugs</a></td>
+			<td><a href="legextension.html">Seated Leg Extension</a></td>
+			<td><a href="overheadpress.html">Overhead Press</a></td>
+			<td><a href="barbellshrugs.html">Barbell Shrugs</a></td>
 			<td>Rest</td>
 		</tr>
 			
 		<tr>
-			<td>Seated Leg Curl</td>
-			<td>Cable Tricep Pushdown</td>
-			<td>Lat Pulldown</td>
-			<td>Seated Leg Curl</td>
-			<td>Cable Tricep Pushdown</td>
-			<td>Lat Pulldown</td>
+			<td><a href="seatedcalfraise.html">Seated Leg Curls</a></td>
+			<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
+			<td><a href="lateralpulldown.html">Lat Pulldowns</a></td>
+			<td><a href="seatedcalfraise.html">Seated Leg Curls</a></td>
+			<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
+			<td><a href="lateralpulldown.html">Lat Pulldowns</a></td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
-			<td>Standing Calf Raise</td>
-			<td>Incline Bench Press</td>
-			<td>Pendlay Row</td>
-			<td>Standing Calf Raise</td>
-			<td>Incline Bench Press</td>
-			<td>Pendlay Row</td>
+			<td><a href="calfraise.html">Calf Raise</a></td>
+			<td><a href="inclinebenchpress.html">Incline Bench Press</a></td>
+			<td><a href="pendlayrow.html">Pendlay Row</a></td>
+			<td><a href="calfraise.html">Calf Raise</a></td>
+			<td><a href="inclinebenchpress.html">Incline Bench Press</a></td>
+			<td><a href="pendlayrow.html">Pendlay Row</a></td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
-			<td>Seated Calf Raise</td>
-			<td>Over-head Cable Tricep Extension</td>
-			<td>Face Pull</td>
-			<td>Seated Calf Raise</td>
-			<td>Over-head Cable Tricep Extension</td>
-			<td>Face Pull</td>
+			<td><a href="seatedcalfraise.html">Seated Calf Raise</a></td>
+			<td><a href="ohtricepextension.html">Over-head Cable Tricep Extension</a></td>
+			<td><a href="facepull.html">Face Pull</a></td>
+			<td><a href="seatedcalfraise.html">Seated Calf Raise</a></td>
+			<td><a href="ohtricepextension.html">Over-head Cable Tricep Extension</a></td>
+			<td><a href="facepull.html">Face Pull</a></td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
 			<td>*Ab excercise of your choice*</td>
 			<td>*Ab excercise of your choice*</td>
-			<td>Dumbbell Curl</td>
+			<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
 			<td>*Ab excercise of your choice*</td>
 			<td>*Ab excercise of your choice*</td>
-			<td>Dumbbell Curl</td>
+			<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
 			<td>Rest</td>
 		</tr>
 	</tbody>
