Finished linking excercises

--- a/html/routines.html
+++ b/html/routines.html
@@ -48,100 +48,100 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td>Squat</td>
+					<td><a href="lifts/squat.html">Squat</a></td>
 					<td>Rest</td>
-					<td><a href="squat.html">Squat</a></td>
+					<td><a href="lifts/squat.html">Squat</a></td>
 					<td>Rest</td>
-					<td>Squat</td>
+					<td><a href="lifts/squat.html">Squat</a></td>
 					<td>Rest</td>
 					<td>Rest</td>
 				</tr>
 				<tr>
-					<td>Deadlift</td>
+					<td><a href="lifts/deadlift.html">Deadlift</a></td>
 					<td>Rest</td>
-					<td>Deadlift</td>
+					<td><a href="lifts/deadlift.html">Deadlift</a></td>
 					<td>Rest</td>
-					<td>Deadlift</td>
-					<td>Rest</td>
-					<td>Rest</td>
-				</tr>
-
-				<tr>
-					<td>Standing Calf Raise</td>
-					<td>Rest</td>
-					<td>Standing Calf Raise</td>
-					<td>Rest</td>
-					<td>Standing Calf Raise</td>
+					<td><a href="lifts/deadlift.html">Deadlift</a></td>
 					<td>Rest</td>
 					<td>Rest</td>
 				</tr>
 
 				<tr>
-					<td><a href="benchpress.html">Bench Press</a></td>
+					<td><a href="lifts/calfraise.html">Calf Raise</a></td>
 					<td>Rest</td>
-					<td><a href="benchpress.html">Bench Press</a></td>
+					<td><a href="lifts/calfraise.html">Calf Raise</a></td>
 					<td>Rest</td>
-					<td><a href="benchpress.html">Bench Press</a></td>
-					<td>Rest</td>
-					<td>Rest</td>
-				</tr>
-
-				<tr>
-					<td>Pull Ups</td>
-					<td>Rest</td>
-					<td>Pull Ups</td>
-					<td>Rest</td>
-					<td>Pull Ups</td>
+					<td><a href="lifts/calfraise.html">Calf Raise</a></td>
 					<td>Rest</td>
 					<td>Rest</td>
 				</tr>
 
 				<tr>
-					<td>Overhead Press</td>
+					<td><a href="lifts/benchpress.html">Bench Press</a></td>
 					<td>Rest</td>
-					<td>Overhead Press</td>
+					<td><a href="lifts/benchpress.html">Bench Press</a></td>
 					<td>Rest</td>
-					<td>Overhead Press</td>
-					<td>Rest</td>
-					<td>Rest</td>
-				</tr>
-
-				<tr>
-					<td><a href="cablerows.html">Cable Rows</a></td>
-					<td>Rest</td>
-					<td><a href="cablerows.html">Cable Rows</a></td>
-					<td>Rest</td>
-					<td><a href="cablerows.html">Cable Rows</a></td>
+					<td><a href="lifts/benchpress.html">Bench Press</a></td>
 					<td>Rest</td>
 					<td>Rest</td>
 				</tr>
 
 				<tr>
-					<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
+					<td><a href="lifts/pullups.html">Pull Ups</a></td>
 					<td>Rest</td>
-					<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
+					<td><a href="lifts/pullups.html">Pull Ups</a></td>
 					<td>Rest</td>
-					<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
-					<td>Rest</td>
-					<td>Rest</td>
-				</tr>
-
-				<tr>
-					<td>Cable Tricep Extension</td>
-					<td>Rest</td>
-					<td>Cable Tricep Extension</td>
-					<td>Rest</td>
-					<td>Cable Tricep Extension</td>
+					<td><a href="lifts/pullups.html">Pull Ups</a></td>
 					<td>Rest</td>
 					<td>Rest</td>
 				</tr>
 
 				<tr>
-					<td><a href="dumbbelllateralraise.html">Dumbbell Lateral Raises</a></td>
+					<td><a href="lifts/overheadpress.html">Overhead Press</a></td>
 					<td>Rest</td>
-					<td><a href="dumbbelllateralraise.html">Dumbbell Lateral Raises</a></td>
+					<td><a href="lifts/overheadpress.html">Overhead Press</a></td>
 					<td>Rest</td>
-					<td><a href="dumbbelllateralraise.html">Dumbbell Lateral Raises</a></td>
+					<td><a href="lifts/overheadpress.html">Overhead Press</a></td>
+					<td>Rest</td>
+					<td>Rest</td>
+				</tr>
+
+				<tr>
+					<td><a href="lifts/cablerows.html">Cable Rows</a></td>
+					<td>Rest</td>
+					<td><a href="lifts/cablerows.html">Cable Rows</a></td>
+					<td>Rest</td>
+					<td><a href="lifts/cablerows.html">Cable Rows</a></td>
+					<td>Rest</td>
+					<td>Rest</td>
+				</tr>
+
+				<tr>
+					<td><a href="lifts/dumbbellcurl.html">Dumbbell Curls</a></td>
+					<td>Rest</td>
+					<td><a href="lifts/dumbbellcurl.html">Dumbbell Curls</a></td>
+					<td>Rest</td>
+					<td><a href="lifts/dumbbellcurl.html">Dumbbell Curls</a></td>
+					<td>Rest</td>
+					<td>Rest</td>
+				</tr>
+
+				<tr>
+					<td><a href="lifts/tricepextension.html">Cable Tricep Extension</a></td>
+					<td>Rest</td>
+					<td><a href="lifts/tricepextension.html">Cable Tricep Extension</a></td>
+					<td>Rest</td>
+					<td><a href="lifts/tricepextension.html">Cable Tricep Extension</a></td>
+					<td>Rest</td>
+					<td>Rest</td>
+				</tr>
+
+				<tr>
+					<td><a href="lifts/dumbbelllateralraise.html">Dumbbell Lateral Raises</a></td>
+					<td>Rest</td>
+					<td><a href="lifts/dumbbelllateralraise.html">Dumbbell Lateral Raises</a></td>
+					<td>Rest</td>
+					<td><a href="lifts/dumbbelllateralraise.html">Dumbbell Lateral Raises</a></td>
 					<td>Rest</td>
 					<td>Rest</td>
 				</tr>
@@ -184,60 +184,60 @@
 		</thead>
 		<tbody>
 		<tr>
-			<td><a href="benchpress.html">Bench Press</a></td>
-			<td><a href="squat.html">Squat</a></td>
+			<td><a href="lifts/benchpress.html">Bench Press</a></td>
+			<td><a href="lifts/squat.html">Squat</a></td>
 			<td>Rest</td>
-			<td><a href="benchpress.html">Bench Press</a></td>
-			<td><a href="squat.html">Squat</a></td>
+			<td><a href="lifts/benchpress.html">Bench Press</a></td>
+			<td><a href="lifts/squat.html">Squat</a></td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
 		<tr>
-			<td><a href="pullups.html">Pull Ups</a></td>
-			<td><a href="deadlift.html">Deadlift</a></td>
+			<td><a href="lifts/pullups.html">Pull Ups</a></td>
+			<td><a href="lifts/deadlift.html">Deadlift</a></td>
 			<td>Rest</td>
-			<td><a href="pullups.html">Pull Ups</a></td>
-			<td><a href="deadlift.html">Deadlift</a></td>
-			<td>Rest</td>
-			<td>Rest</td>
-		</tr>
-
-		<tr>
-			<td><a href="overheadpress.html">Overhead Press</a></td>
-			<td><a href="legextension.html">Seated Leg Extension</a></td>
-			<td>Rest</td>
-			<td><a href="overheadpress.html">Overhead Press</a></td>
-			<td><a href="legextension.html">Seated Leg Extension</a></td>
+			<td><a href="lifts/pullups.html">Pull Ups</a></td>
+			<td><a href="lifts/deadlift.html">Deadlift</a></td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
-			<td><a href="cablerows.html">Cable Rows</a></td>		
-			<td><a href="seatedcalfraise.html">Seated Leg Curls</a></td>
+			<td><a href="lifts/overheadpress.html">Overhead Press</a></td>
+			<td><a href="lifts/legextension.html">Seated Leg Extension</a></td>
 			<td>Rest</td>
-			<td><a href="cablerows.html">Cable Rows</a></td>
-			<td><a href="seatedcalfraise.html">Seated Leg Curls</a></td>
-			<td>Rest</td>
-			<td>Rest</td>
-		</tr>
-
-		<tr>
-			<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
-			<td><a href="calfraise.html">Calf Raise</a></td>
-			<td>Rest</td>
-			<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
-			<td><a href="calfraise.html">Calf Raise</a></td>
+			<td><a href="lifts/overheadpress.html">Overhead Press</a></td>
+			<td><a href="lifts/legextension.html">Seated Leg Extension</a></td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
-			<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
-			<td><a href="seatedcalfraise.html">Seated Calf Raise</a></td>
+			<td><a href="lifts/cablerows.html">Cable Rows</a></td>		
+			<td><a href="lifts/seatedcalfraise.html">Seated Leg Curls</a></td>
 			<td>Rest</td>
-			<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
-			<td><a href="seatedcalfraise.html">Seated Calf Raise</a></td>
+			<td><a href="lifts/cablerows.html">Cable Rows</a></td>
+			<td><a href="lifts/seatedcalfraise.html">Seated Leg Curls</a></td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
+
+		<tr>
+			<td><a href="lifts/dumbbellcurl.html">Dumbbell Curls</a></td>
+			<td><a href="lifts/calfraise.html">Calf Raise</a></td>
+			<td>Rest</td>
+			<td><a href="lifts/dumbbellcurl.html">Dumbbell Curls</a></td>
+			<td><a href="lifts/calfraise.html">Calf Raise</a></td>
+			<td>Rest</td>
+			<td>Rest</td>
+		</tr>
+
+		<tr>
+			<td><a href="lifts/tricepextension.html">Cable Tricep Extension</a></td>
+			<td><a href="lifts/seatedcalfraise.html">Seated Leg Curls</a></td>
+			<td>Rest</td>
+			<td><a href="lifts/tricepextension.html">Cable Tricep Extension</a></td>
+			<td><a href="lifts/seatedcalfraise.html">Seated Leg Curls</a></td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
@@ -283,72 +283,72 @@
 		</thead>
 		<tbody>
 		<tr>
-			<td><a href="squat.html">Squat</a></td>
-			<td><a href="benchpress.html">Bench Press</a></td>
-			<td><a href="pullups.html">Pull Ups</a></td>
-			<td><a href="squat.html">Squat</a></td>
-			<td><a href="benchpress.html">Bench Press</a></td>
-			<td><a href="pullups.html">Pull Ups</a></td>
+			<td><a href="lifts/squat.html">Squat</a></td>
+			<td><a href="lifts/benchpress.html">Bench Press</a></td>
+			<td><a href="lifts/pullups.html">Pull Ups</a></td>
+			<td><a href="lifts/squat.html">Squat</a></td>
+			<td><a href="lifts/benchpress.html">Bench Press</a></td>
+			<td><a href="lifts/pullups.html">Pull Ups</a></td>
 			<td>Rest</td>
 		</tr>
 			
 		<tr>
-			<td><a href="deadlift.html">Deadlift</a></td>
-			<td><a href="dumbbelllateralrasie.html">Dumbbell Lateral Raise</a></td>
-			<td><a href="cablerows.html">Cable Rows</a></td>
-			<td><a href="deadlift.html">Deadlift</a></td>
-			<td><a href="dumbbelllateralrasie.html">Dumbbell Lateral Raise</a></td>
-			<td><a href="cablerows.html">Cable Rows</a></td>
+			<td><a href="lifts/deadlift.html">Deadlift</a></td>
+			<td><a href="lifts/dumbbellateralrasie.html">Dumbbell Lateral Raise</a></td>
+			<td><a href="lifts/cablerows.html">Cable Rows</a></td>
+			<td><a href="lifts/deadlift.html">Deadlift</a></td>
+			<td><a href="lifts/seatedcalfraise.html">Seated Leg Curls</a></td>
+			<td><a href="lifts/cablerows.html">Cable Rows</a></td>
 			<td>Rest</td>
 		</tr>
 			
 		<tr>
-			<td><a href="legextension.html">Seated Leg Extension</a></td>
-			<td><a href="overheadpress.html">Overhead Press</a></td>
-			<td><a href="barbellshrugs.html">Barbell Shrugs</a></td>
-			<td><a href="legextension.html">Seated Leg Extension</a></td>
-			<td><a href="overheadpress.html">Overhead Press</a></td>
-			<td><a href="barbellshrugs.html">Barbell Shrugs</a></td>
+			<td><a href="lifts/legextension.html">Seated Leg Extension</a></td>
+			<td><a href="lifts/overheadpress.html">Overhead Press</a></td>
+			<td><a href="lifts/barbellshrugs.html">Barbell Shrugs</a></td>
+			<td><a href="lifts/legextension.html">Seated Leg Extension</a></td>
+			<td><a href="lifts/overheadpress.html">Overhead Press</a></td>
+			<td><a href="lifts/barbellshrugs.html">Barbell Shrugs</a></td>
 			<td>Rest</td>
 		</tr>
 			
 		<tr>
-			<td><a href="seatedcalfraise.html">Seated Leg Curls</a></td>
-			<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
-			<td><a href="lateralpulldown.html">Lat Pulldowns</a></td>
-			<td><a href="seatedcalfraise.html">Seated Leg Curls</a></td>
-			<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
-			<td><a href="lateralpulldown.html">Lat Pulldowns</a></td>
+			<td><a href="lifts/seatedcalfraise.html">Seated Leg Curls</a></td>
+			<td><a href="lifts/tricepextension.html">Cable Tricep Extension</a></td>
+			<td><a href="lifts/lateralpulldown.html">Lat Pulldowns</a></td>
+			<td><a href="lifts/seatedcalfraise.html">Seated Leg Curls</a></td>
+			<td><a href="lifts/tricepextension.html">Cable Tricep Extension</a></td>
+			<td><a href="lifts/lateralpulldown.html">Lat Pulldowns</a></td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
-			<td><a href="calfraise.html">Calf Raise</a></td>
-			<td><a href="inclinebenchpress.html">Incline Bench Press</a></td>
-			<td><a href="pendlayrow.html">Pendlay Row</a></td>
-			<td><a href="calfraise.html">Calf Raise</a></td>
-			<td><a href="inclinebenchpress.html">Incline Bench Press</a></td>
-			<td><a href="pendlayrow.html">Pendlay Row</a></td>
+			<td><a href="lifts/calfraise.html">Calf Raise</a></td>
+			<td><a href="lifts/inclinebenchpress.html">Incline Bench Press</a></td>
+			<td><a href="lifts/pendlayrow.html">Pendlay Row</a></td>
+			<td><a href="lifts/calfraise.html">Calf Raise</a></td>
+			<td><a href="lifts/inclinebenchpress.html">Incline Bench Press</a></td>
+			<td><a href="lifts/pendlayrow.html">Pendlay Row</a></td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
-			<td><a href="seatedcalfraise.html">Seated Calf Raise</a></td>
-			<td><a href="ohtricepextension.html">Over-head Cable Tricep Extension</a></td>
-			<td><a href="facepull.html">Face Pull</a></td>
-			<td><a href="seatedcalfraise.html">Seated Calf Raise</a></td>
-			<td><a href="ohtricepextension.html">Over-head Cable Tricep Extension</a></td>
-			<td><a href="facepull.html">Face Pull</a></td>
+			<td><a href="lifts/seatedcalfraise.html">Seated Leg Curls</a></td>
+			<td><a href="lifts/ohtricepextension.html">Over-head Cable Tricep Extension</a></td>
+			<td><a href="lifts/facepull.html">Face Pull</a></td>
+			<td><a href="lifts/seatedcalfraise.html">Seated Leg Curls</a></td>
+			<td><a href="lifts/ohtricepextension.html">Over-head Cable Tricep Extension</a></td>
+			<td><a href="lifts/facepull.html">Face Pull</a></td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
 			<td>*Ab excercise of your choice*</td>
 			<td>*Ab excercise of your choice*</td>
-			<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
+			<td><a href="lifts/dumbbellcurl.html">Dumbbell Curls</a></td>
 			<td>*Ab excercise of your choice*</td>
 			<td>*Ab excercise of your choice*</td>
-			<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
+			<td><a href="lifts/dumbbellcurl.html">Dumbbell Curls</a></td>
 			<td>Rest</td>
 		</tr>
 	</tbody>
