--- a/html/lifts/squat.html
+++ b/html/lifts/squat.html
@@ -4,7 +4,7 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Squat</title>
-	<link rel="stylesheet" href="../css/css_squat.css">
+	<link rel="stylesheet" href="#">
 </head>
 
 <body>
@@ -12,7 +12,7 @@
 	<header>
 		<div class="main">
 			<div class="logo">
-				<img src="../img/logo1.png">
+				<img src="../../img/logo1.png">
 			</div>
 			<ul>
 				<li class="active"><a href="../index.html">Home</a></li>
@@ -26,7 +26,7 @@
 	<figure>
 		<h2>Muscle Activation Diagram</h2>
 		<div class="pic">
-		  		<img src="../img/lifts/squat.jpg">
+		  		<img src="../../img/lifts/squat.jpg">
 		  	</div>
   		<figcaption>Primary Muscles: Quadriceps<br>Secondary Muscles: Glutes, Soleus</figcaption>
 	</figure>
