--- a/html/lifts/overheadpress.html
+++ b/html/lifts/overheadpress.html
@@ -11,7 +11,7 @@
 	<header>
 		<div class="main">
 			<div class="logo">
-				<img src="../img/logo1.png">
+				<img src="../../img/logo1.png">
 			</div>
 			<ul>
 				<li class="active"><a href="../index.html">Home</a></li>
@@ -23,7 +23,7 @@
 
 	<figure>
 		<h2>Muscle Activation Diagram</h2>
-  		<img src="../img/lifts/overheadpress.jpg">
+  		<img src="../../img/lifts/overheadpress.jpg">
   		<figcaption>Primary Muscles: Anterior Delt, Pectoralis Major, Triceps<br>Secondary Muscles: Trapezius</figcaption>
 	</figure>
 
