first excer page

--- a/html/lifts/squat.html
+++ b/html/lifts/squat.html
@@ -4,7 +4,7 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Squat</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
@@ -24,32 +24,32 @@
 
 		<h1>The Squat</h1>
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
+		<h2 class="titl">Muscle Activation Diagram</h2>
 		<div class="pic">
 		  		<img src="../../img/lifts/squat.jpg">
 		  	</div>
-  		<figcaption>Primary Muscles: Quadriceps<br>Secondary Muscles: Glutes, Soleus</figcaption>
+  		
 	</figure>
 
-	<h3>Description</h3>
-	<p class="desc">The squat is an effective excercise for developing lower body strength. Squatting is a compound movement(a movement that
-	utilizes multiple muscle groups) that uses some of the largest muscles in our body which can cause the feeling of fatigue
-	shortly after performing the excercise. While the movement primarily targets the quadriceps the glutes have also been shown to have
-	a large amount of electromyography (EMG) activation during the movement with the soleus playing a primarily balancing role.</p>
+	<h3 class="de">Description</h3>
+	<p class="desc">The squat is an effective excercise for developing lower body strength. Squatting <br> is a compound movement(a movement that
+	utilizes multiple muscle groups) that <br> uses some of the largest muscles in our body which can cause the feeling of fatigue <br>
+	shortly after performing the excercise. While the movement primarily targets the quadriceps <br> the glutes have also been shown to have
+	a large amount of electromyography (EMG) <br> activation during the movement with the soleus playing a primarily balancing role.</p>
 
 
-	<h4>Instructions</h4>
-	<p class="desc1">Step 1: Stand with your feet hip-distance apart and with them facing forward and rest the bar on the back of your shoulders
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Stand with your feet hip-distance apart and with them facing forward and rest the bar <br> on the back of your shoulders
 	just above your shoulder blades.<br><br>
 
-	Step 2: Brace your core by taking a deep breath into your diaphragm. Begin the movement at your hips through pushing them behind you in
-	a sitting motion then bend your knees ensuring they travel in the direction that your toes are pointing.<br><br>
+	Step 2: Brace your core by taking a deep breath into your diaphragm. Begin the movement <br> at your hips through pushing them behind you in
+	a sitting motion then bend your knees ensuring <br> they travel in the direction that your toes are pointing.<br><br>
 	
-	Step 3: Travel down until your knees are atleast flexed at a 90 degree angle. If possible travel down to the point that the crease of your hip is
-	below your knees (referred to as breaking parallel). Once at the lowest point in your squat exhale slowly and push your body weight up while making
-	sure to evenly distribute the pressure across your feet.</p>
+	Step 3: Travel down until your knees are atleast flexed at a 90 degree angle. If possible travel down <br> to the point that the crease of your hip is
+	below your knees (referred to as breaking parallel). Once at <br> the lowest point in your squat exhale slowly and push your body weight up while making
+	sure to evenly <br> distribute the pressure across your feet.</p>
 
-	<h5>Demonstration</h5>
+	<h5 class="demo">Demonstration</h5>
 	<div class="gif">
 	<embed src="https://j.gifs.com/r86BvB.gif" width="400" height="400"></embed>
 </div>
