Trying to edit lifts

--- a/html/lifts/squat.html
+++ b/html/lifts/squat.html
@@ -15,8 +15,8 @@
 				<img src="../../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="../index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../about_us.html">About Us</a></li>
 			</ul>
 		</div>
 		</header>
