--- a/html/lifts/deadlift.html
+++ b/html/lifts/deadlift.html
@@ -4,7 +4,7 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Deadlift</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../../css/css_squat.css">
 </head>
 
 <body>
@@ -22,19 +22,21 @@
 	</header>
 
 	<figure>
-		<h2>Muscle Activation Diagram</h2>
-  		<img src="../../img/lifts/deadlift.jpg">
+		<h2 class="titl">Muscle Activation Diagram</h2>
+		<div class="pic">
+  			<img src="../../img/lifts/deadlift.jpg">
+  		</div>
   		<figcaption>Primary Muscles: Hamstrings, Spinal Erectors, Glutes,<br>Secondary Muscles: Lats, Trapezius, Levator Scapulae</figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p>The deadlift is a primarily lower body but can also be classified as a full body compound movement. It is a key excercise when training
+	<h3 class="de">Description</h2>
+	<p class="desc">The deadlift is a primarily lower body but can also be classified as a full body compound movement. It is a key excercise when training
 	for strength and like the squat is one of the more physcial and mentally taxing movements. The primary muscles being used for the deadlift are the hamstrings,
 	spinal erectors, and glutes with a respectable amount of activation being shown in the lats, trapezius, and levator scapulae.</p>
 
 
-	<h2>Instructions</h2>
-	<p>Step 1: Stand with your feet hip-distance apart and bend down in a sitting motion until your thighs are parallel with the ground while ensuring your back is straight. Take an overhand grip on the bar with your handss slightly wider than shoulder-width aprt.<br><br>
+	<h4 class="Inst">Instructions</h4>
+	<p class="desc1">Step 1: Stand with your feet hip-distance apart and bend down in a sitting motion until your thighs are parallel with the ground while ensuring your back is straight. Take an overhand grip on the bar with your handss slightly wider than shoulder-width aprt.<br><br>
 
 	Step 2: Take a deep breath into your diaphragm and lift the bar by pushing up through your legs imagining your arms are just ropes with a claw at the end.<br><br>
 	
@@ -42,7 +44,8 @@
 
 	Step 4: Exhale while reversing the movement to bring the weight to the ground.</p>
 
-	<h2>Demonstration</h2>
+	<h5 class="demo">Demonstration</h5>
+	<div class="gif">
 	<embed src="https://j.gifs.com/71kYBO.gif" width="400" height="400"></embed>
 </body>
 </html>
